[metadata]
name = cpm-cli
version = 1.0
description = Chromos Package Manager
long_description = file: README.md
long_description_content_type = text/markdown

author = Jordi Sánchez
url = https://github.com/jorsanpe/cpm

classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Programming Language :: Python :: 3
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: OS Independent

[options]
packages = find:
scripts = scripts/cpm

python_requires = >=3.7
install_requires =
  urllib3
  pyyaml
  requests
  docker
  ninja
  cmake

[options.extras_require]
testing =
  pytest
  mock
  werkzeug
  Flask

[tool:pytest]
python_classes =
