[metadata]
name = cpm-cli
version = 1.11.0
description = Chromos Package Manager
long_description = file: README.md
long_description_content_type = text/markdown

author = Jordi Sánchez
url = https://github.com/jorsanpe/cpm

classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Programming Language :: Python :: 3
  Programming Language :: C++
  Programming Language :: C
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: OS Independent
  Topic :: Software Development
  Topic :: Software Development :: Build Tools
  Topic :: Software Development :: Embedded Systems
  Topic :: System :: Software Distribution

[options]
packages = find:
scripts = scripts/cpm

python_requires = >=3.7
install_requires =
  urllib3
  requests
  docker
  ninja
  cmake
  semver
  ruamel.yaml>=0.17.17
  six

[options.extras_require]
testing =
  pytest
  mock
  werkzeug
  Flask

[tool:pytest]
python_classes =
